ready to deploy on Heroku

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
+__pycache__/
 .idea
 venv
+AWS tests.py
+continut.html
+datetime tests.py
+fisier.txt
+init_quiz.py
+main_sesiune.py
+poza.PNG
+questions.txt
+questions_backup.txt
+quiz.json
+quiz.txt
+request tests.py
+Sendgrid tests.py
+sesiune Y.py
+sg.txt
